--- a/src/templates/home_fragment/home1.html
+++ b/src/templates/home_fragment/home1.html
@@ -2,17 +2,18 @@
 
 {% block title %}Home{% endblock %}
 
+{% block preload %}
+<link rel="preload" href="/api/homepage" as="fetch" crossorigin="anonymous">
+{% endblock %}
+
 {% block main %}
 <div class="card home1" id="home-container">
-    <div id="home">
-        <textarea class="hidden">{{ content | safe }}</textarea>
-    </div>
+    <div id="home"></div>
 </div>
 {% endblock %}
 {% block script %}
 <script>
     const homeDiv = document.getElementById("home");
-    homeDiv.innerHTML = DOMPurify.sanitize(
-        homeDiv.querySelector("textarea").value, { ADD_ATTR: ['target'] });
+    fetch("/api/homepage").then(b => b.text()).then(b => inject(homeDiv, b, true));
 </script>
 {% endblock %}
