--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -8,10 +8,6 @@
         <link rel="stylesheet"
               href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
               crossorigin="anonymous">
-        <link href="/assets/css/github-markdown.min.css"
-              rel="stylesheet"
-              media="async"
-              onload="this.media='all'">
         <link href="/assets/css/style.css" rel="stylesheet">
         <link href="/static/favicon.png" rel="icon">
 
@@ -94,11 +90,11 @@
         <script src="/assets/js/darkMode.js"></script>
         <script src="/assets/js/showdown.min.js"></script>
         <script src="/assets/js/purify.min.js"></script>
-        <script src="/assets/js/convertmd.js"></script>
+        <script src="/assets/js/convertMD.js"></script>
         {% block script %}{% endblock %}
-        <script src="/assets/js/new-pagination.js"></script>
-        <script src="/assets/js/seemore.js"></script>
-        <script src="/assets/js/dateconvert.js"></script>
+        <script src="/assets/js/newPagination.js"></script>
+        <script src="/assets/js/seeMore.js"></script>
+        <script src="/assets/js/dateConvert.js"></script>
         <script src="/assets/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
