--- a/src/templates/auth/changepassword.html
+++ b/src/templates/auth/changepassword.html
@@ -31,12 +31,14 @@
 {% endblock %}
 {% block script %}
 <script>
+    const newPassword = document.querySelector("input[name=newPassword]");
+    const confirmPassword = document.querySelector("input[name=confirmation]");
     document.querySelector("form").addEventListener("submit", event => {
-        if (document.querySelector("input[name=newPassword]").value != document.querySelector("input[name=confirmation]").value) {
+        if (newPassword.value != confirmPassword.value) {
             makeAlert("Passwords do not match");
             event.preventDefault();
         }
-        if (document.querySelector("input[name=newPassword]").value.length < 8) {
+        if (newPassword.value.length < 8) {
             makeAlert("Password must be at least 8 characters");
             event.preventDefault();
         }
@@ -44,7 +46,13 @@
 
     function makeAlert(message) {
         var tmp = document.createElement('div');
-        tmp.innerHTML = `<div class="alert alert-danger alert-dismissible fade show" role="alert">${message}<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>`;
+        tmp.innerHTML = `<div class="alert alert-danger alert-dismissible fade show" role="alert">
+                             ${message}
+                             <button type="button"
+                                     class="btn-close"
+                                     data-bs-dismiss="alert"
+                                     aria-label="Close"></button>
+                         </div>`;
         document.querySelector("main").prepend(tmp.firstChild);
     }
 </script>
