--- a/src/templates/contest/scoreboard.html
+++ b/src/templates/contest/scoreboard.html
@@ -55,17 +55,17 @@
 {% block script %}
 {% if session["admin"] %}
     <script>
-        function createForm(user_id, username) {
+        function createForm(userId, username) {
             document.getElementById("confirm").style.display = "";
             document.querySelector("#confirm .btn")
                     .setAttribute("value", `Are you sure you want to disqualify ${username}? ` +
                                            "This action is irreversible. Click here to confirm");
-            document.querySelector("#confirm input[name=user_id]").setAttribute("value", user_id);
+            document.querySelector("#confirm input[name=user_id]").setAttribute("value", userId);
         }
 
-        function dq(e, user_id) {
+        function dq(e, userId) {
             var username = e.parentElement.parentElement.querySelector(".username").innerText;
-            createForm(user_id, username);
+            createForm(userId, username);
         }
     </script>
 {% endif %}
