--- a/src/templates/admin/users.html
+++ b/src/templates/admin/users.html
@@ -65,32 +65,32 @@
 {% endblock %}
 {% block script %}
 <script>
-    function createForm(msg, path, user_id) {
+    function createForm(msg, path, userId) {
         document.getElementById("confirm").style.display = "";
         document.querySelector("#confirm .btn").setAttribute("value", msg);
         document.querySelector("#confirm form").setAttribute("action", path);
-        document.querySelector("#confirm input[name=user_id]").setAttribute("value", user_id);
+        document.querySelector("#confirm input[name=user_id]").setAttribute("value", userId);
     }
 
     function ban(e) {
         var username = e.parentElement.parentElement.querySelector(".username").innerHTML.trim();
-        var user_id = e.parentElement.parentElement.querySelector(".userid").innerHTML;
+        var userId = e.parentElement.parentElement.querySelector(".userid").innerHTML;
         var msg = `Are you sure you want to ban/unban ${username}? Click here to confirm.`;
-        createForm(msg, "/admin/ban", user_id);
+        createForm(msg, "/admin/ban", userId);
     }
 
     function resetpass(e) {
         var username = e.parentElement.parentElement.querySelector(".username").innerHTML.trim();
-        var user_id = e.parentElement.parentElement.querySelector(".userid").innerHTML;
+        var userId = e.parentElement.parentElement.querySelector(".userid").innerHTML;
         var msg = `Are you sure you want to reset ${username}'s password? Click here to confirm.`;
-        createForm(msg, "/admin/resetpass", user_id);
+        createForm(msg, "/admin/resetpass", userId);
     }
 
     function admin(e) {
         var username = e.parentElement.parentElement.querySelector(".username").innerHTML.trim();
-        var user_id = e.parentElement.parentElement.querySelector(".userid").innerHTML;
+        var userId = e.parentElement.parentElement.querySelector(".userid").innerHTML;
         var msg = `Are you sure you want to grant/revoke admin to ${username}? Click here to confirm.`;
-        createForm(msg, "/admin/makeadmin", user_id);
+        createForm(msg, "/admin/makeadmin", userId);
     }
 </script>
 {% endblock %}
