--- a/src/templates/auth/register.html
+++ b/src/templates/auth/register.html
@@ -49,13 +49,14 @@
 {% endblock %}
 {% block script %}
 <script>
+    const newPassword = document.getElementById("password");
+    const confirmPassword = document.getElementById("confirmation");
     document.querySelector("form").addEventListener("submit", event => {
-        var password = document.getElementById("password").value;
-        if (password != document.getElementById("confirmation").value) {
+        if (newPassword.value != confirmPassword.value) {
             makeAlert("Passwords do not match");
             event.preventDefault();
         }
-        if (password.length < 8) {
+        if (newPassword.value.length < 8) {
             makeAlert("Password must be at least 8 characters");
             event.preventDefault();
         }
