--- a/src/templates/problem/create.html
+++ b/src/templates/problem/create.html
@@ -44,15 +44,15 @@
 <script>
     document.getElementById("description-out").attachShadow({mode: "open"});
     document.getElementById("hints-out").attachShadow({mode: "open"});
-    document.getElementById("description").oninput = function() {
+    document.getElementById("description").addEventListener("input", function() {
         const outputDiv = document.getElementById("description-out");
         injectEditor(outputDiv, this.value);
         this.style.height = outputDiv.offsetHeight + "px";
-    }
-    document.getElementById("hints").oninput = function() {
+    });
+    document.getElementById("hints").addEventListener("input", function() {
         const outputDiv = document.getElementById("hints-out");
         injectEditor(outputDiv, this.value);
         this.style.height = outputDiv.offsetHeight + "px";
-    }
+    });
 </script>
 {% endblock %}
